# IronVault-Admin

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Degine.md  PRD.md  README.md  Roadmap.md
ironvault-core/: Cargo.toml
ironvault-core/src/: audit.rs  auth.rs  credential_store.rs  crypto.rs  lib.rs  licensing.rs  models.rs  network.rs  sdk_vmp.rs  security.rs
ironvault-core/src/database/: oracle.rs  postgres.rs
ironvault-db/: Cargo.toml
ironvault-db/src/: gpf.rs  lib.rs  oracle.rs  oracle_11g.rs  oracle_12c.rs  postgres.rs  sai_agartala.rs
ironvault-ui/: Cargo.toml  build.rs
ironvault-ui/src/: auth.rs  context.rs  controllers.rs  main.rs
ironvault-ui/src/handlers/: auth.rs  users.rs
ironvault-ui/ui/: appwindow.slint  dashboard.slint  login.slint  main.slint  theme.slint
ironvault-ui/ui/components/: animated_logo.slint  confirm_button.slint  fluid_button.slint  sidebar.slint  toast.slint  topbar.slint
ironvault-ui/ui/views/: dashboard.slint  gpf.slint  login.slint  pendak.slint  pension.slint  register.slint  vlcs.slint
scripts/: rotate_pg_cert.ps1
