[workspace]
members = [
    "ironvault-core",
    "ironvault-db",
    "ironvault-ui"
]
resolver = "2"

[profile.release]
opt-level = 3       # Tells the compiler to aggressively optimize for speed and code blending
lto = "fat"         # Heavy Link-Time Optimization; blends functions across crate boundaries
codegen-units = 1   # Forces single-threaded compilation to allow max cross-functional optimization
panic = "abort"     # Strips structural landing pads and stack unwind tables (no descriptive panic text)
strip = true        # Completely removes all symbols, debug information, and function names

[dependencies]
oracle = "0.6.3" # Native Oracle database connector framework