[package]
name = "ironvault-core"
version = "0.1.0"
edition = "2021"

[dependencies]

# Cryptography for our Dual-Authorization signatures

ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# Database Connectors configured for localized security

tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4"] }
native-tls = "0.2.18"
postgres-native-tls = "0.5.3"
oracle = "0.6"

# Serialization for secure data transmissions

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"