[package]
name = "ironvault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography & Hashing
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Data Serialization & Logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
log = "0.4"

# Networking & Async
tokio = { version = "1.35", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation"] }