[package]
name = "ironvault-ui"
#version.workspace = true
#edition.workspace = true
#authors.workspace = true
#license.workspace = true
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
slint = { version = "1.8", features = ["backend-winit", "renderer-skia"] }
ironvault-core = { path = "../ironvault-core" }
ironvault-db = { path = "../ironvault-db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.18"
rfd = "0.17.2"
image = "0.25"
# chrono = "0.4"



# ADDED: Required for generating runtime verification factors (CAPTCHA)
rand = "0.8" 
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }


[dev-dependencies]
tokio-test = "0.4"

# UI Engine Core
slint = "1.5"

[build-dependencies]
slint-build = "1.5"